fixing linebreak in homepanel

--- a/tractestmanager/htdocs/css/testmanager.css
+++ b/tractestmanager/htdocs/css/testmanager.css
@@ -24,3 +24,5 @@
 #tabcontent form.mod { margin-top: 1em; overflow: visible; padding: 0 }
 
 #content.admin h1 { float: left; }
+
+.testmanager .home h1 { float: none !important; }
